syntax = "proto3";

message DADInt {
  string key = 1;
  int32 value = 2;
}

message ClientTransactionRequest {
  string clientId = 1;
  repeated string readOperations = 2;
  repeated DADInt writeOperations = 3;
}

message ClientTransactionReply { repeated DADInt objValues = 1; }

message ReceiveTransactionReply {}

message ClientStatusRequest {}

message ClientStatusReply { bool repy = 1; }

service ClientServerService {
  rpc SubmitTransaction(ClientTransactionRequest)
      returns (ClientTransactionReply);
  rpc ReceiveTransaction(ClientTransactionReply)
      returns (ReceiveTransactionReply);
  rpc Status(ClientStatusRequest) returns (ClientStatusReply);
}
